--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
 
         <div class="content">
-          <h3>my name is <span>Mostofa Sarker</span></h3>
+          <h3>my name is <span>Junayed Kiron Tiash</span></h3>
           <p>
             Hi, there i'm Mostofa Sarker.I am currently doing BSc in Computer
             Scince and Engineering at American international uniersity of
